--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
+    "redux": "^4.1.1",
     "regenerator-runtime": "^0.13.7",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
@@ -40,6 +41,7 @@
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
-    "react-modal": "^3.14.3"
+    "react-modal": "^3.14.3",
+    "uuid": "^8.3.2"
   }
 }
