--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "normalize.css": "^8.0.1",
     "react-modal": "^3.14.3",
+    "react-redux": "^7.2.4",
     "uuid": "^8.3.2"
   }
 }
