--- a/package.json
+++ b/package.json
@@ -26,23 +26,23 @@
     "babel-loader": "^8.2.2",
     "core-js": "^3.15.2",
     "css-loader": "^6.2.0",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.1",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "redux": "^4.1.1",
     "regenerator-runtime": "^0.13.7",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
+    "uuid": "^8.3.2",
     "validator": "^13.6.0",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0"
-  },
-  "dependencies": {
-    "normalize.css": "^8.0.1",
-    "react-modal": "^3.14.3",
-    "react-redux": "^7.2.4",
-    "uuid": "^8.3.2"
+    "webpack-dev-server": "^4.0.0",
+    "react-dates": "^21.8.0"
   }
 }
