--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "serve": "webpack serve --open --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -26,10 +27,12 @@
     "babel-loader": "^8.2.2",
     "core-js": "^3.15.2",
     "css-loader": "^6.2.0",
+    "jest": "^27.1.0",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
+    "react-dates": "^21.8.0",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.4",
@@ -42,7 +45,6 @@
     "validator": "^13.6.0",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0",
-    "react-dates": "^21.8.0"
+    "webpack-dev-server": "^4.0.0"
   }
 }
