--- a/package.json
+++ b/package.json
@@ -6,37 +6,43 @@
   "scripts": {
     "serve": "webpack serve --open --mode development",
     "build": "webpack --mode production",
-    "test": "jest"
+    "test": "jest --config=jest.config.json"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/StuLast/react-indecision-app-demo.git"
+    "url": "git+https://github.com/StuLast/react-expensidy-app-demo.git"
   },
   "author": "Stu Last",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/StuLast/react-indecision-app-demo/issues"
+    "url": "https://github.com/StuLast/react-expensify-app-demo/issues"
   },
-  "homepage": "https://github.com/StuLast/react-indecision-app-demo#readme",
+  "homepage": "https://github.com/StuLast/react-expensiy-app-demo#readme",
   "devDependencies": {
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.15.0",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "babel-loader": "^8.2.2",
     "core-js": "^3.15.2",
     "css-loader": "^6.2.0",
+    "dotenv": "^10.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
     "jest": "^27.1.0",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "normalize.css": "^8.0.1",
+    "raf": "^3.4.1",
     "react": "^17.0.2",
     "react-dates": "^21.8.0",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
+    "react-test-renderer": "^17.0.2",
     "redux": "^4.1.1",
     "regenerator-runtime": "^0.13.7",
     "sass-loader": "^12.1.0",
