--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "serve": "webpack serve --open --mode development",
-    "build": "webpack --mode production",
+    "build:dev": "webpack --mode development --env development",
+    "build:prod": "webpack --mode production --env production",
     "test": "jest --config=jest.config.json"
   },
   "repository": {
