--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
     "jest": "^27.1.0",
+    "mini-css-extract-plugin": "^2.3.0",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "normalize.css": "^8.0.1",
@@ -54,10 +55,9 @@
     "validator": "^13.6.0",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0",
-    "mini-css-extract-plugin": "^2.3.0"
+    "webpack-dev-server": "^4.0.0"
   },
   "dependencies": {
-    
+    "express": "^4.17.1"
   }
 }
