--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev-server": "webpack serve --open --mode development",
     "build:dev": "webpack --mode development --env development",
     "build:prod": "webpack --mode production --env production",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "heroku-postbuild": "npm run build:prod"
   },
   "repository": {
     "type": "git",
