--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev-server": "webpack serve --open --mode development",
     "build:dev": "webpack --mode development --env development",
     "build:prod": "webpack --mode production --env production",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json --runInBand",
     "heroku-postbuild": "npm run build:prod"
   },
   "engines": {
@@ -35,6 +35,7 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "babel-loader": "^8.2.2",
     "core-js": "^3.15.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.2.0",
     "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
@@ -54,6 +55,8 @@
     "react-router-dom": "^5.2.1",
     "react-test-renderer": "^17.0.2",
     "redux": "^4.1.1",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.7",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
@@ -64,6 +67,7 @@
     "webpack-dev-server": "^4.0.0"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "firebase": "^9.0.2"
   }
 }
